# Rux

./: .replit  MASTER_PROMPT.md  main.py  plugin.lua  pyproject.toml  replit.md  store.py
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--Rux-ai-error-Traceback-most-recent-call-last-File-home_1777469621148.txt  Pasted--strict-local-HttpService-game-GetService-HttpService-l_1775659083510.txt  Pasted--strict-local-HttpService-game-GetService-HttpService-l_1775744339998.txt  Pasted-You-can-u-read-the-script-Rux-I-d-be-happy-to-help-read_1775744397448.txt  Pasted-do-it-and-didnt-i-tell-you-to-fix-this-index-dashboard-_1777516006407.txt
data/: admins.json  announcements.json  audit_log.json  credits.json  daily_spend.json  plugins.json  sessions.json  spending_caps.json  system_config.json  users.json  webhooks.json
data/conv_lists/: 984cd1b9-28d9-404a-96d5-449d56e3cee8.json
data/convs/: new-1776171076980.json  new-1776172576684.json  new-1776333841477.json  new-1776469940333.json  new-1776469970280.json  new-1776502575174.json  new-1776512007013.json  new-1777458179141.json  new-1777467809032.json  new-1777469679632.json  new-1777470342373.json  new-1777471337393.json  new-1777505147593.json  new-1777508190712.json  new-1777509023344.json  new-1777509854184.json  new-1777518236086.json  new-1777518776234.json  new-1777527414360.json  new-1777529190274.json  new-1777530542211.json  new-1777531879537.json  new-1777532187497.json  new-1777532270041.json  new-1777535082144.json  new-1777562501758.json
templates/: admin.html  index.html  landing.html
(+3 files in other folders)
