[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.91.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.71.0",
    "google-generativeai>=0.8.6",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
]
